--- a/app/templates/_list_recipes.html
+++ b/app/templates/_list_recipes.html
@@ -4,7 +4,19 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h5><i class="fa fa-cutlery" aria-hidden="true"></i> All Recipes</h5>
+                <form action="post">
+                    <div class="form-group col-lg-12">
+                        <h5><i class="fa fa-cutlery" aria-hidden="true"></i> All Recipes</h5>
+                        <div class="sort-select">
+                            <label>Sort By:</label>
+                            <select class="js-search-category form-control" name="sort_by"
+                                data-placeholder="Sort by...">
+                                <option value="time_added">Time added</option>
+                                <option value="popularity">Popularity</option>
+                            </select>
+                        </div>
+                    </div>
+                </form>
             </div>
             {% for recipe in recipes %}
             {% include '_recipe.html' %}
