--- a/app/templates/edit_recipe.html
+++ b/app/templates/edit_recipe.html
@@ -6,21 +6,91 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-12 title text-center">
-                <h1>Add recipe</h1>
+                <h1>Edit recipe</h1>
             </div>
             <div class="col-lg-8 content">
-                <div class="form-group">
-                    {{ wtf.quick_form(form) }}
-                    {{ form.name }}
-                    <label>Select one or more ingredients that are included in recipe</label>
-                    <select class="js-search-ingredients form-control" name="ingredients[]" multiple="multiple"
-                        data-placeholder="Included Ingredients" form="category_form">
-                        <!-- Jinja for ingredients -->
-                        {% for ingredient in ingredients %}
-                        <option value="{{ ingredient.name }}">{{ ingredient.name }}</option>
-                        {% endfor %}
-                    </select>
-                </div>
+                <form method='POST' id='category_form' enctype="multipart/form-data">
+                    {{ form.hidden_tag() }}
+                    {{ form.csrf_token }}
+                    <div class="form-group">
+                        <br>
+                        <div class="form-group required">
+                            {{ form.name.label }}
+                            {{ form.name(class_="form-control", placeholder=recipe.name) }}
+                        </div>
+                        <div class="form-group required">
+                            {{ form.content.label}}
+                            {{ form.content(class_="form-control", placeholder="Your recipe...") }}
+                        </div>
+                        <div class="form-group required">
+                            {{ form.cuisine.label }}
+                            {{ form.cuisine(class_="form-control") }}
+                        </div>
+                        <div class="form-group required">
+                            {{ form.category.label }}
+                            {{ form.category(class_="form-control") }}
+                        </div>
+                        <div class="form-group">
+                            {{ form.image.label }}
+                            {{ form.image }}
+                        </div>
+                        <div class="row">
+                            <div class="form-group col-lg-6">
+                                {{ form.ingredients.label }}
+                                {{ form.ingredients(multiple="") }}
+                            </div>
+                            <div class="form-group col-lg-6">
+                                {{ form.allergens.label }}
+                                {{ form.allergens }}
+                            </div>
+                        </div>
+                        <div class="container"></div>
+                        <div class="row">
+                            <div class="form-group required col-lg-4">
+                                {{ form.calories.label }}
+                                {{ form.calories(class_="form-control") }}
+                            </div>
+                            <div class="form-group required col-lg-4">
+                                    {{ form.carbohydrates.label }}
+                                    {{ form.carbohydrates(class_="form-control") }}
+                            </div>
+                            <div class="form-group required col-lg-4">
+                                {{ form.proteins.label }}
+                                {{ form.proteins(class_="form-control") }}
+                            </div>
+                            <div class="form-group required col-lg-6">
+                                {{ form.fats.label }}
+                                {{ form.fats(class_="form-control") }}
+                            </div>
+                            <div class="form-group required col-lg-6">
+                                {{ form.cholesterol.label }}
+                                {{ form.cholesterol(class_="form-control") }}
+                            </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="form-group required col-lg-4">
+                                {{ form.time_to_prepare.label }}
+                                {{ form.time_to_prepare(class_="form-control") }}
+                            </div>
+                            <div class="form-group required col-lg-4">
+                                {{ form.cooking_time.label }}
+                                {{ form.cooking_time(class_="form-control") }}
+                            </div>
+                            <div class="form-group required col-lg-4">
+                                {{ form.serves_num_people.label }}
+                                {{ form.serves_num_people(class_="form-control") }}
+                            </div>
+                        </div>
+                        <div>
+                            {{ form.submit }}
+                        </div>
+                        {% if form.errors %}
+                            {{ form.errors }}
+                        {% endif %}
+                        
+                    </div>
+                </form>
             </div>
         </div>
     </div>
