--- a/app/templates/_list_recipes.html
+++ b/app/templates/_list_recipes.html
@@ -4,15 +4,16 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <form action="post">
+                <form action="POST">
                     <div class="form-group col-lg-12">
                         <h5><i class="fa fa-cutlery" aria-hidden="true"></i> All Recipes</h5>
+
                         <div class="sort-select">
                             <label>Sort By:</label>
-                            <select class="js-search-category form-control" name="sort_by"
-                                data-placeholder="Sort by...">
-                                <option value="time_added">Time added</option>
-                                <option value="popularity">Popularity</option>
+                            <select class="js-search-category form-control" name="sort_by" form="category_form">
+                                <option value="1">From newest</option>
+                                <option value="2">From oldest</option>
+                                <option value="3">Popularity</option>
                             </select>
                         </div>
                     </div>
@@ -21,9 +22,7 @@
             {% for recipe in recipes %}
             {% include '_recipe.html' %}
             {% endfor %}
-            <div class="col-lg-12 text-center">
-                <a href="#" class="btn btn-load">Load More</a>
-            </div>
+            
         </div>
     </div>
 </div>
