--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -24,11 +24,12 @@ body {
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 #edit_btn {
-  margin-top: 13px;
+  margin-bottom: 7px;
   padding: 10px;
   color: #fff;
   border-radius: 4px;
   background-color: #08a81e;
+  justify-content: center;
 }
 #list_image {
   object-fit: cover;
@@ -36,8 +37,8 @@ body {
 }
 
 #page_image {
-  object-fit: cover;
-  height: 700px;
+  max-width:100%;
+  object-fit: scale-down;
 }
 .navbar .navbar-brand {
   font-weight: bold;
