--- a/app/templates/recipes_list.html
+++ b/app/templates/recipes_list.html
@@ -5,6 +5,7 @@
 
 <!-- Search -->
 <form method='POST' id='category_form' action='{{ url_for("search_handler") }}'>
+    {{ form.hidden_tag() }}
     <div class="search">
         <div class="container">
             <div class="row">
@@ -13,46 +14,24 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="form-group">
-                                <label>Choose category</label>
-                                <select class="js-search-category form-control" name="category"
-                                    data-placeholder="Choose Category" form="category_form">
-                                    <!-- Jinja for categories in DB -->
-                                    {% for category in categories %}
-                                    <option value="{{ category.id }}">{{ category.name }}</option>
-                                    {% endfor %}
-                                </select>
+                                {{ form.category.label }}
+                                {{ form.category(class_="form-control") }}
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="form-group">
-                                <label>Choose cuisine</label>
-                                <select class="js-search-category form-control" name="category"
-                                    data-placeholder="Choose Cuisine" form="category_form">
-                                    <!-- Jinja for categories in DB -->
-                                    {% for cuisine in cuisines %}
-                                    <option value="{{ cuisine.id }}">{{ cuisine.name }}</option>
-                                    {% endfor %}
-                                </select>
+                                {{ form.cuisine.label }}
+                                {{ form.cuisine(class_="form-control") }}
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="form-group">
-                                <label>Select one or more ingredients that should be included in recipe</label>
-                                <select class="js-search-ingredients form-control" name="ingredients[]"
-                                    multiple="multiple" data-placeholder="Included Ingredients" form="category_form">
-                                    {% for ingredient in ingredients %}
-                                    <option value="{{ ingredient.name }}">{{ ingredient.name }}</option>
-                                    {% endfor %}
-                                </select>
+                                {{ form.ingredients.label }}
+                                {{ form.ingredients(class_="form-control") }}
                             </div>
                             <div class="form-group">
-                                <label>Select one or more allergens that shouldn't be included in recipe</label>
-                                <select class="js-search-ingredients form-control" name="allergens[]"
-                                    multiple="multiple" data-placeholder="Without allergens">
-                                    {% for allergen in allergens %}
-                                    <option value="{{ allergen.id }}">{{ allergen.name }}</option>
-                                    {% endfor %}
-                                </select>
+                                {{ form.allergens.label }}
+                                {{ form.allergens(class_="form-control") }}
                             </div>
                         </div>
                         <div class="col-lg-6">
@@ -83,7 +62,6 @@
 </form>
 
 <!-- Load more recipes -->
-{% if next_url %}
 <div class="col-lg-12 text-center">
     {% if next_url %}
     <button class="btn btn-load">
@@ -96,7 +74,6 @@
     </button>
     {% endif %}
 </div>
-{% endif %}
 
 
 
