Added check for empty list

--- a/app/templates/_list_recipes.html
+++ b/app/templates/_list_recipes.html
@@ -9,6 +9,7 @@
                     <div class="form-group col-lg-12">
                         <h5><i class="fa fa-cutlery" aria-hidden="true"></i> All Recipes</h5>
 
+                        {% if not homepage %}
                         <div class="sort-select">
                             <label>Sort By:</label>
                             <select id="sort" class="js-search-category form-control" name="sort_by" form="category_form">
@@ -17,9 +18,17 @@
                                 <option value="3">Popularity</option>
                             </select>
                         </div>
+                        {% endif %}
+
+                        {% if empty %}
+                        <div>
+                            <h2>No Recipes available...</h2>
+                        </div>
+                        {% endif %}
                     </div>
                 </form>
             </div>
+            
             {% for recipe in recipes %}
             {% include '_recipe.html' %}
             {% endfor %}
