--- a/app/templates/add_recipe.html
+++ b/app/templates/add_recipe.html
@@ -19,7 +19,7 @@
                         </div>
                         <div class="form-group required">
                             {{ form.content.label}}
-                            {{ form.content(class_="form-control") }}
+                            {{ form.content(class_="form-control", rows="10") }}
                         </div>
                         <div class="form-group required">
                             {{ form.cuisine.label }}
