--- a/app/templates/recipes_list.html
+++ b/app/templates/recipes_list.html
@@ -42,7 +42,7 @@
                         </div>
                         <div class="col-lg-12">
                             <div class="form-group">
-                                <input type="email" class="form-control" placeholder="Search by Keyword">
+                                <input type="text" class="form-control" placeholder="Search by Keyword">
                                 <button type="submit" class="btn">Search Recipes</button>
                             </div>
                         </div>
