--- a/app/templates/_list_recipes.html
+++ b/app/templates/_list_recipes.html
@@ -29,7 +29,7 @@
                 </form>
             </div>
             
-            {% for recipe in recipes %}
+            {% for recipe in recipes|sort(attribute=sortkey, reverse = True) %}
             {% include '_recipe.html' %}
             {% endfor %}
             
