--- a/app/templates/recipes_list.html
+++ b/app/templates/recipes_list.html
@@ -68,7 +68,7 @@
                                 {{ form.any_ingredients(class_="form-control") }}
                             </div>
                         </div>
-                        <div class="col-lg-12">
+                        <div class="col-lg-12 search">
                             <div class="form-group">
                                 {{ form.search_text(class_="form-control") }}
                                 <button type="submit" class="btn">Search Recipes</button>
