--- a/app/templates/recipes_list.html
+++ b/app/templates/recipes_list.html
@@ -1,35 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-<script>
-    $(document).on("change", '#department', function(e) {
-        var department = $(this).val();
-        
-
-        $.ajax({
-            type: "POST",
-            data: {department: department},
-            url: 'admin/users/get_name_list.php',
-            dataType: 'json',
-            success: function(json) {
-
-                var $el = $("#name");
-                $el.empty(); // remove old options
-                $el.append($("<option></option>")
-                        .attr("value", '').text('Please Select'));
-                $.each(json, function(value, key) {
-                    $el.append($("<option></option>")
-                            .attr("value", value).text(key));
-                });														
-                
-
-                
-                
-            }
-        });
-
-    });
-</script>
 
 <!-- Search -->
 <form method='POST' id='category_form' action='{{ url_for("search_handler", form=form) }}'>
@@ -66,6 +37,10 @@
                             <div class="form-group">
                                 {{ form.any_ingredients.label }}
                                 {{ form.any_ingredients(class_="form-control") }}
+                            </div>
+                            <div class="form-group">
+                                {{ form.sortkey.label }}
+                                {{ form.sortkey(class_="form-control") }}
                             </div>
                         </div>
                         <div class="col-lg-12 search">
