Sorted things with sortkey, added stats page.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -78,6 +78,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('contact')  }}">Contact</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('recipes_stats')  }}">Stats</a>
+                </li>
                 <li class="nav-item btn-submit-recipe">
                     <a class="nav-link" href="{{ url_for('add_recipe')  }}"><i class="fa fa-upload"
                             aria-hidden="true"></i> Submit Recipe</a>
