--- a/app/templates/_list_recipes.html
+++ b/app/templates/_list_recipes.html
@@ -17,7 +17,7 @@
                 </form>
             </div>
             
-            {% for recipe in recipes|sort(attribute=sortkey, reverse=reverse) %}
+            {% for recipe in recipes %}
                 {% include '_recipe.html' %}
             {% endfor %}
             
