New chart and removed unused search functionality

--- a/app/templates/recipes_list.html
+++ b/app/templates/recipes_list.html
@@ -42,10 +42,7 @@
                                 {{ form.sortkey.label }}
                                 {{ form.sortkey(class_="form-control") }}
                             </div>
-                        </div>
-                        <div class="col-lg-12 search">
-                            <div class="form-group">
-                                {{ form.search_text(class_="form-control") }}
+                            <div class="form-group btn" style="display:block;">
                                 <button type="submit" class="btn">Search Recipes</button>
                             </div>
                         </div>
