--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -54,7 +54,16 @@ body {
   max-width:100%;
   object-fit: scale-down;
 }
-
+.center-div
+{
+     margin: auto;
+     top: 0;
+     right: 0;
+     bottom: 0;
+     left: 0;
+     width: 300px;
+     height: 300px;
+}
 .btn-default {
   background: #08a81e;
   color: #fff;
