--- a/app/templates/recipes_stats.html
+++ b/app/templates/recipes_stats.html
@@ -2,15 +2,23 @@
 {% block app_content %}
 <div class="page"> 
     <div class="container">
-        <div class="row justify-content-center" style="width:300px; height:300px;">
-            <canvas id="myChart" width="200" height="200"></canvas> 
-            <p>Number of recipes in each category</p>
+        <div class="center-div">
+            <canvas id="categoryChart" width="200" height="200"></canvas> 
+            <p style="padding:10px;">Number of recipes in each category</p>
         </div>
-    </div>    
+        <div style="padding:50px;"></div>
+        <div class="center-div">
+            <canvas id="upvotesChart" width="200" height="200"></canvas> 
+            <p>Number of upvotes per recipe in the first ten</p>
+        </div>
+    </div>     
 <script>
-  var ctx = document.getElementById('myChart').getContext('2d');
+  var categoryctx = document.getElementById('categoryChart').getContext('2d');
+  var upvotesctx = document.getElementById('upvotesChart').getContext('2d');
   var categories = {{ categories|safe }}
-  var myChart = new Chart(ctx, {
+  var upvotes = {{ upvotes|safe }}
+  var recipes = {{ recipes|safe }}
+  var myChart = new Chart(categoryctx, {
       type: 'pie',
       data: {
           labels: categories,
@@ -35,16 +43,35 @@
               ],
               borderWidth: 2
           }]
-      },
-      options: {
-        scales: {
-            yAxes: [{
-                ticks: {
-                    beginAtZero: true
-                }
-            }]
-        }
       }
+  });
+
+  var myChart = new Chart(upvotesctx, {
+      type: 'bar',
+      data: {
+          labels: recipes,
+          datasets: [{
+              label: '# of Votes',
+              data: upvotes,
+              backgroundColor: [
+                  'rgba(255, 99, 132, 0.2)',
+                  'rgba(54, 162, 235, 0.2)',
+                  'rgba(255, 206, 86, 0.2)',
+                  'rgba(75, 192, 192, 0.2)',
+                  'rgba(153, 102, 255, 0.2)',
+                  'rgba(255, 159, 64, 0.2)'
+              ],
+              borderColor: [
+                  'rgba(255, 99, 132, 1)',
+                  'rgba(54, 162, 235, 1)',
+                  'rgba(255, 206, 86, 1)',
+                  'rgba(75, 192, 192, 1)',
+                  'rgba(153, 102, 255, 1)',
+                  'rgba(255, 159, 64, 1)'
+              ],
+              borderWidth: 2
+          }]
+        }
   });
 </script>
 </div>
