--- a/app/templates/edit_recipe.html
+++ b/app/templates/edit_recipe.html
@@ -20,7 +20,7 @@
                         </div>
                         <div class="form-group required">
                             {{ form.content.label}}
-                            {{ form.content(class_="form-control", placeholder="Your recipe...") }}
+                            {{ form.content(class_="form-control", rows="10", placeholder="Your recipe...") }}
                         </div>
                         <div class="form-group required">
                             {{ form.cuisine.label }}
