--- a/app/templates/edit_recipe.html
+++ b/app/templates/edit_recipe.html
@@ -15,8 +15,12 @@
                     <div class="form-group">
                         <br>
                         <div class="form-group required">
+                            {{ form.name.label }}
+                            {{ form.name(class_="form-control", placeholder=recipe.name) }}
+                        </div>
+                        <div class="form-group required">
                             {{ form.content.label}}
-                            {{ form.content(class_="form-control", placeholder="Your recipe...", rows="10") }}
+                            {{ form.content(class_="form-control", placeholder="Your recipe...") }}
                         </div>
                         <div class="form-group required">
                             {{ form.cuisine.label }}
