Changed main page button urls and fixed edit feature.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,7 +17,7 @@
                     <h1><a href="recipe-detail.html">The Salmon Oatmeal Crackers</a></h1>
                     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida
                         at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                    <p><a class="btn btn-lg btn-primary" href="recipe-detail.html" role="button">Read more</a></p>
+                    <p><a class="btn btn-lg btn-primary" href="{{ url_for('recipes_list') }}" role="button">Read more</a></p>
                 </div>
             </div>
         </div>
@@ -28,7 +28,7 @@
                     <h1><a href="recipe-detail.html">Wide range of vegetarian recipes</a></h1>
                     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida
                         at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                    <p><a class="btn btn-lg btn-primary" href="recipe-detail.html" role="button">Read more</a></p>
+                    <p><a class="btn btn-lg btn-primary" href="{{ url_for('recipes_list') }}" role="button">Read more</a></p>
                 </div>
             </div>
         </div>
@@ -39,7 +39,7 @@
                     <h1><a href="recipe-detail.html">Homemade Bread</a></h1>
                     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida
                         at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                    <p><a class="btn btn-lg btn-primary" href="recipe-detail.html" role="button">Read more</a></p>
+                    <p><a class="btn btn-lg btn-primary" href="{{ url_for('recipes_list') }}" role="button">Read more</a></p>
                 </div>
             </div>
         </div>
